// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component Should match the snapshot of a simple alert 1`] = `
.c7 {
  margin-right: 8px;
  pointer-events: none;
  width: 24px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c3 .c6 function (_ref6) {
  -webkit-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -moz-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -ms-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  return: "\\n          font-size: ".concat(fontSizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c6 function (_ref6) var fontSizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c5 .c6 {
  margin-right: 0;
}

.c5:hover,
.c5:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c5:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c5:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #f2f2f2;
  border: 1.5px solid #424242;
  color: #191919;
  padding: 12px 16px;
}

.c0 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #424242;
  margin-right: 16px;
}

.c0 .c1 > .c4 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #424242;
  margin-left: 0;
}

<div
  className="c0"
  role="alert"
>
  <div
    className="c1 c2"
    onClose={[Function]}
  >
    <span>
      Sample alert
    </span>
    <button
      className="c3 Button__IconButton-sc-1ovnfsw-2 c4 c5"
      disabled={false}
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root c6 c7"
        data-qtm-preloader="icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        theme={
          Object {
            "baseFontSize": 16,
            "breakpoints": Object {
              "large": Object {
                "columns": 12,
                "width": 1440,
              },
              "medium": Object {
                "columns": 12,
                "width": 1024,
              },
              "small": Object {
                "columns": 8,
                "width": 600,
              },
              "xlarge": Object {
                "columns": 12,
                "width": 1920,
              },
              "xsmall": Object {
                "columns": 4,
              },
            },
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "components": Object {
              "alert": Object {
                "skins": Object {
                  "error": Object {
                    "background": "#fff5f5",
                    "icon": "#e91b0c",
                    "text": "#ac001a",
                  },
                  "neutral": Object {
                    "background": "#f2f2f2",
                    "icon": "#424242",
                    "text": "#191919",
                  },
                  "primary": Object {
                    "background": "#E5EDFC",
                    "icon": "#1250C4",
                    "text": "#002F7B",
                  },
                  "success": Object {
                    "background": "#dcedc8",
                    "icon": "#3b610f",
                    "text": "#004D40",
                  },
                  "warning": Object {
                    "background": "#ffefd6",
                    "icon": "#f09100",
                    "text": "#d14900",
                  },
                },
              },
              "button": Object {
                "skins": Object {
                  "error": Object {
                    "mainColor": Object {
                      "100": "#fff5f5",
                      "300": "#f88e86",
                      "500": "#ec584e",
                      "700": "#e91b0c",
                      "900": "#ac001a",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "neutral": Object {
                    "mainColor": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "primary": Object {
                    "mainColor": Object {
                      "100": "#E5EDFC",
                      "300": "#89AAE7",
                      "500": "#0CC0EA",
                      "700": "#1250C4",
                      "900": "#002F7B",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "secondary": Object {
                    "mainColor": Object {
                      "100": "#F7B0C8",
                      "300": "#F278A1",
                      "500": "#E91E63",
                      "700": "#DE0059",
                      "900": "#9E003F",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "success": Object {
                    "mainColor": Object {
                      "100": "#dcedc8",
                      "300": "#c9eda2",
                      "500": "#7ed321",
                      "700": "#3b610f",
                      "900": "#004D40",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "warning": Object {
                    "mainColor": Object {
                      "100": "#ffefd6",
                      "300": "#ffda6a",
                      "500": "#ffc107",
                      "700": "#f09100",
                      "900": "#d14900",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                },
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component When you set a alert custom icon Should match the snapshot with an icon 1`] = `
.c9 {
  margin-right: 8px;
  pointer-events: none;
  width: 24px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c5:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c5:focus,
.c5:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c5:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c5 .c8 function (_ref6) {
  -webkit-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -moz-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -ms-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  return: "\\n          font-size: ".concat(fontSizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c5 .c8 function (_ref6) var fontSizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 24px;
}

.c7 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c7 .c8 {
  margin-right: 0;
}

.c7:hover,
.c7:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c7:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c7:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #f2f2f2;
  border: 1.5px solid #424242;
  color: #191919;
  padding: 12px 16px;
}

.c0 .c1 .c3 {
  color: #424242;
  margin-right: 16px;
}

.c0 .c1 > .c6 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c6 .Button__IconButton-sc-1ovnfsw-2 {
  color: #424242;
  margin-left: 0;
}

<div
  className="c0"
  role="alert"
>
  <div
    className="c1 c2"
    onClose={[Function]}
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c3 c4"
      data-qtm-preloader="icon"
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
    <span>
      Sample alert
    </span>
    <button
      className="c5 Button__IconButton-sc-1ovnfsw-2 c6 c7"
      disabled={false}
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root c8 c9"
        data-qtm-preloader="icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        theme={
          Object {
            "baseFontSize": 16,
            "breakpoints": Object {
              "large": Object {
                "columns": 12,
                "width": 1440,
              },
              "medium": Object {
                "columns": 12,
                "width": 1024,
              },
              "small": Object {
                "columns": 8,
                "width": 600,
              },
              "xlarge": Object {
                "columns": 12,
                "width": 1920,
              },
              "xsmall": Object {
                "columns": 4,
              },
            },
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "components": Object {
              "alert": Object {
                "skins": Object {
                  "error": Object {
                    "background": "#fff5f5",
                    "icon": "#e91b0c",
                    "text": "#ac001a",
                  },
                  "neutral": Object {
                    "background": "#f2f2f2",
                    "icon": "#424242",
                    "text": "#191919",
                  },
                  "primary": Object {
                    "background": "#E5EDFC",
                    "icon": "#1250C4",
                    "text": "#002F7B",
                  },
                  "success": Object {
                    "background": "#dcedc8",
                    "icon": "#3b610f",
                    "text": "#004D40",
                  },
                  "warning": Object {
                    "background": "#ffefd6",
                    "icon": "#f09100",
                    "text": "#d14900",
                  },
                },
              },
              "button": Object {
                "skins": Object {
                  "error": Object {
                    "mainColor": Object {
                      "100": "#fff5f5",
                      "300": "#f88e86",
                      "500": "#ec584e",
                      "700": "#e91b0c",
                      "900": "#ac001a",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "neutral": Object {
                    "mainColor": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "primary": Object {
                    "mainColor": Object {
                      "100": "#E5EDFC",
                      "300": "#89AAE7",
                      "500": "#0CC0EA",
                      "700": "#1250C4",
                      "900": "#002F7B",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "secondary": Object {
                    "mainColor": Object {
                      "100": "#F7B0C8",
                      "300": "#F278A1",
                      "500": "#E91E63",
                      "700": "#DE0059",
                      "900": "#9E003F",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "success": Object {
                    "mainColor": Object {
                      "100": "#dcedc8",
                      "300": "#c9eda2",
                      "500": "#7ed321",
                      "700": "#3b610f",
                      "900": "#004D40",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "warning": Object {
                    "mainColor": Object {
                      "100": "#ffefd6",
                      "300": "#ffda6a",
                      "500": "#ffc107",
                      "700": "#f09100",
                      "900": "#d14900",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                },
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component When you set a different skin Should match a skin snapshot 1`] = `
.c7 {
  margin-right: 8px;
  pointer-events: none;
  width: 24px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c3 .c6 function (_ref6) {
  -webkit-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -moz-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -ms-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  return: "\\n          font-size: ".concat(fontSizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c6 function (_ref6) var fontSizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c5 .c6 {
  margin-right: 0;
}

.c5:hover,
.c5:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c5:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c5:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #f2f2f2;
  border: 1.5px solid #424242;
  color: #191919;
  padding: 12px 16px;
}

.c0 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #424242;
  margin-right: 16px;
}

.c0 .c1 > .c4 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #424242;
  margin-left: 0;
}

<div
  className="c0"
  role="alert"
>
  <div
    className="c1 c2"
    onClose={[Function]}
  >
    <span>
      blue
    </span>
    <button
      className="c3 Button__IconButton-sc-1ovnfsw-2 c4 c5"
      disabled={false}
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root c6 c7"
        data-qtm-preloader="icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        theme={
          Object {
            "baseFontSize": 16,
            "breakpoints": Object {
              "large": Object {
                "columns": 12,
                "width": 1440,
              },
              "medium": Object {
                "columns": 12,
                "width": 1024,
              },
              "small": Object {
                "columns": 8,
                "width": 600,
              },
              "xlarge": Object {
                "columns": 12,
                "width": 1920,
              },
              "xsmall": Object {
                "columns": 4,
              },
            },
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "components": Object {
              "alert": Object {
                "skins": Object {
                  "error": Object {
                    "background": "#fff5f5",
                    "icon": "#e91b0c",
                    "text": "#ac001a",
                  },
                  "neutral": Object {
                    "background": "#f2f2f2",
                    "icon": "#424242",
                    "text": "#191919",
                  },
                  "primary": Object {
                    "background": "#E5EDFC",
                    "icon": "#1250C4",
                    "text": "#002F7B",
                  },
                  "success": Object {
                    "background": "#dcedc8",
                    "icon": "#3b610f",
                    "text": "#004D40",
                  },
                  "warning": Object {
                    "background": "#ffefd6",
                    "icon": "#f09100",
                    "text": "#d14900",
                  },
                },
              },
              "button": Object {
                "skins": Object {
                  "error": Object {
                    "mainColor": Object {
                      "100": "#fff5f5",
                      "300": "#f88e86",
                      "500": "#ec584e",
                      "700": "#e91b0c",
                      "900": "#ac001a",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "neutral": Object {
                    "mainColor": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "primary": Object {
                    "mainColor": Object {
                      "100": "#E5EDFC",
                      "300": "#89AAE7",
                      "500": "#0CC0EA",
                      "700": "#1250C4",
                      "900": "#002F7B",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "secondary": Object {
                    "mainColor": Object {
                      "100": "#F7B0C8",
                      "300": "#F278A1",
                      "500": "#E91E63",
                      "700": "#DE0059",
                      "900": "#9E003F",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "success": Object {
                    "mainColor": Object {
                      "100": "#dcedc8",
                      "300": "#c9eda2",
                      "500": "#7ed321",
                      "700": "#3b610f",
                      "900": "#004D40",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "warning": Object {
                    "mainColor": Object {
                      "100": "#ffefd6",
                      "300": "#ffda6a",
                      "500": "#ffc107",
                      "700": "#f09100",
                      "900": "#d14900",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                },
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component When you set a different skin Should match a skin snapshot 2`] = `
.c7 {
  margin-right: 8px;
  pointer-events: none;
  width: 24px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c3 .c6 function (_ref6) {
  -webkit-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -moz-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -ms-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  return: "\\n          font-size: ".concat(fontSizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c6 function (_ref6) var fontSizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c5 .c6 {
  margin-right: 0;
}

.c5:hover,
.c5:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c5:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c5:hover {
  background: none;
  opacity: 1;
}

.c8 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #424242;
  margin-right: 16px;
}

.c8 .c1 > .c4 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c8 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #424242;
  margin-left: 0;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #E5EDFC;
  border: 1.5px solid #1250C4;
  color: #002F7B;
  padding: 12px 16px;
}

.c0 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #1250C4;
  margin-right: 16px;
}

.c0 .c1 > .c4 {
  color: #1250C4;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #1250C4;
  margin-left: 0;
}

<div
  className="c0"
  role="alert"
>
  <div
    className="c1 c2"
    onClose={[Function]}
  >
    <span>
      blue
    </span>
    <button
      className="c3 Button__IconButton-sc-1ovnfsw-2 c4 c5"
      disabled={false}
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root c6 c7"
        data-qtm-preloader="icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        theme={
          Object {
            "baseFontSize": 16,
            "breakpoints": Object {
              "large": Object {
                "columns": 12,
                "width": 1440,
              },
              "medium": Object {
                "columns": 12,
                "width": 1024,
              },
              "small": Object {
                "columns": 8,
                "width": 600,
              },
              "xlarge": Object {
                "columns": 12,
                "width": 1920,
              },
              "xsmall": Object {
                "columns": 4,
              },
            },
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "components": Object {
              "alert": Object {
                "skins": Object {
                  "error": Object {
                    "background": "#fff5f5",
                    "icon": "#e91b0c",
                    "text": "#ac001a",
                  },
                  "neutral": Object {
                    "background": "#f2f2f2",
                    "icon": "#424242",
                    "text": "#191919",
                  },
                  "primary": Object {
                    "background": "#E5EDFC",
                    "icon": "#1250C4",
                    "text": "#002F7B",
                  },
                  "success": Object {
                    "background": "#dcedc8",
                    "icon": "#3b610f",
                    "text": "#004D40",
                  },
                  "warning": Object {
                    "background": "#ffefd6",
                    "icon": "#f09100",
                    "text": "#d14900",
                  },
                },
              },
              "button": Object {
                "skins": Object {
                  "error": Object {
                    "mainColor": Object {
                      "100": "#fff5f5",
                      "300": "#f88e86",
                      "500": "#ec584e",
                      "700": "#e91b0c",
                      "900": "#ac001a",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "neutral": Object {
                    "mainColor": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "primary": Object {
                    "mainColor": Object {
                      "100": "#E5EDFC",
                      "300": "#89AAE7",
                      "500": "#0CC0EA",
                      "700": "#1250C4",
                      "900": "#002F7B",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "secondary": Object {
                    "mainColor": Object {
                      "100": "#F7B0C8",
                      "300": "#F278A1",
                      "500": "#E91E63",
                      "700": "#DE0059",
                      "900": "#9E003F",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "success": Object {
                    "mainColor": Object {
                      "100": "#dcedc8",
                      "300": "#c9eda2",
                      "500": "#7ed321",
                      "700": "#3b610f",
                      "900": "#004D40",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "warning": Object {
                    "mainColor": Object {
                      "100": "#ffefd6",
                      "300": "#ffda6a",
                      "500": "#ffc107",
                      "700": "#f09100",
                      "900": "#d14900",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                },
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component When you set a different skin Should match a skin snapshot 3`] = `
.c7 {
  margin-right: 8px;
  pointer-events: none;
  width: 24px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c3 .c6 function (_ref6) {
  -webkit-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -moz-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -ms-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  return: "\\n          font-size: ".concat(fontSizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c6 function (_ref6) var fontSizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c5 .c6 {
  margin-right: 0;
}

.c5:hover,
.c5:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c5:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c5:hover {
  background: none;
  opacity: 1;
}

.c8 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #424242;
  margin-right: 16px;
}

.c8 .c1 > .c4 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c8 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #424242;
  margin-left: 0;
}

.c9 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #1250C4;
  margin-right: 16px;
}

.c9 .c1 > .c4 {
  color: #1250C4;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c9 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #1250C4;
  margin-left: 0;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #dcedc8;
  border: 1.5px solid #3b610f;
  color: #004D40;
  padding: 12px 16px;
}

.c0 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #3b610f;
  margin-right: 16px;
}

.c0 .c1 > .c4 {
  color: #3b610f;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #3b610f;
  margin-left: 0;
}

<div
  className="c0"
  role="alert"
>
  <div
    className="c1 c2"
    onClose={[Function]}
  >
    <span>
      success
    </span>
    <button
      className="c3 Button__IconButton-sc-1ovnfsw-2 c4 c5"
      disabled={false}
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root c6 c7"
        data-qtm-preloader="icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        theme={
          Object {
            "baseFontSize": 16,
            "breakpoints": Object {
              "large": Object {
                "columns": 12,
                "width": 1440,
              },
              "medium": Object {
                "columns": 12,
                "width": 1024,
              },
              "small": Object {
                "columns": 8,
                "width": 600,
              },
              "xlarge": Object {
                "columns": 12,
                "width": 1920,
              },
              "xsmall": Object {
                "columns": 4,
              },
            },
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "components": Object {
              "alert": Object {
                "skins": Object {
                  "error": Object {
                    "background": "#fff5f5",
                    "icon": "#e91b0c",
                    "text": "#ac001a",
                  },
                  "neutral": Object {
                    "background": "#f2f2f2",
                    "icon": "#424242",
                    "text": "#191919",
                  },
                  "primary": Object {
                    "background": "#E5EDFC",
                    "icon": "#1250C4",
                    "text": "#002F7B",
                  },
                  "success": Object {
                    "background": "#dcedc8",
                    "icon": "#3b610f",
                    "text": "#004D40",
                  },
                  "warning": Object {
                    "background": "#ffefd6",
                    "icon": "#f09100",
                    "text": "#d14900",
                  },
                },
              },
              "button": Object {
                "skins": Object {
                  "error": Object {
                    "mainColor": Object {
                      "100": "#fff5f5",
                      "300": "#f88e86",
                      "500": "#ec584e",
                      "700": "#e91b0c",
                      "900": "#ac001a",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "neutral": Object {
                    "mainColor": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "primary": Object {
                    "mainColor": Object {
                      "100": "#E5EDFC",
                      "300": "#89AAE7",
                      "500": "#0CC0EA",
                      "700": "#1250C4",
                      "900": "#002F7B",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "secondary": Object {
                    "mainColor": Object {
                      "100": "#F7B0C8",
                      "300": "#F278A1",
                      "500": "#E91E63",
                      "700": "#DE0059",
                      "900": "#9E003F",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "success": Object {
                    "mainColor": Object {
                      "100": "#dcedc8",
                      "300": "#c9eda2",
                      "500": "#7ed321",
                      "700": "#3b610f",
                      "900": "#004D40",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "warning": Object {
                    "mainColor": Object {
                      "100": "#ffefd6",
                      "300": "#ffda6a",
                      "500": "#ffc107",
                      "700": "#f09100",
                      "900": "#d14900",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                },
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component When you set a different skin Should match a skin snapshot 4`] = `
.c7 {
  margin-right: 8px;
  pointer-events: none;
  width: 24px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c3 .c6 function (_ref6) {
  -webkit-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -moz-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -ms-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  return: "\\n          font-size: ".concat(fontSizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c6 function (_ref6) var fontSizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c5 .c6 {
  margin-right: 0;
}

.c5:hover,
.c5:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c5:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c5:hover {
  background: none;
  opacity: 1;
}

.c8 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #424242;
  margin-right: 16px;
}

.c8 .c1 > .c4 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c8 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #424242;
  margin-left: 0;
}

.c9 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #1250C4;
  margin-right: 16px;
}

.c9 .c1 > .c4 {
  color: #1250C4;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c9 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #1250C4;
  margin-left: 0;
}

.c10 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #3b610f;
  margin-right: 16px;
}

.c10 .c1 > .c4 {
  color: #3b610f;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c10 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #3b610f;
  margin-left: 0;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #ffefd6;
  border: 1.5px solid #f09100;
  color: #d14900;
  padding: 12px 16px;
}

.c0 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #f09100;
  margin-right: 16px;
}

.c0 .c1 > .c4 {
  color: #f09100;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #f09100;
  margin-left: 0;
}

<div
  className="c0"
  role="alert"
>
  <div
    className="c1 c2"
    onClose={[Function]}
  >
    <span>
      warning
    </span>
    <button
      className="c3 Button__IconButton-sc-1ovnfsw-2 c4 c5"
      disabled={false}
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root c6 c7"
        data-qtm-preloader="icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        theme={
          Object {
            "baseFontSize": 16,
            "breakpoints": Object {
              "large": Object {
                "columns": 12,
                "width": 1440,
              },
              "medium": Object {
                "columns": 12,
                "width": 1024,
              },
              "small": Object {
                "columns": 8,
                "width": 600,
              },
              "xlarge": Object {
                "columns": 12,
                "width": 1920,
              },
              "xsmall": Object {
                "columns": 4,
              },
            },
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "components": Object {
              "alert": Object {
                "skins": Object {
                  "error": Object {
                    "background": "#fff5f5",
                    "icon": "#e91b0c",
                    "text": "#ac001a",
                  },
                  "neutral": Object {
                    "background": "#f2f2f2",
                    "icon": "#424242",
                    "text": "#191919",
                  },
                  "primary": Object {
                    "background": "#E5EDFC",
                    "icon": "#1250C4",
                    "text": "#002F7B",
                  },
                  "success": Object {
                    "background": "#dcedc8",
                    "icon": "#3b610f",
                    "text": "#004D40",
                  },
                  "warning": Object {
                    "background": "#ffefd6",
                    "icon": "#f09100",
                    "text": "#d14900",
                  },
                },
              },
              "button": Object {
                "skins": Object {
                  "error": Object {
                    "mainColor": Object {
                      "100": "#fff5f5",
                      "300": "#f88e86",
                      "500": "#ec584e",
                      "700": "#e91b0c",
                      "900": "#ac001a",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "neutral": Object {
                    "mainColor": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "primary": Object {
                    "mainColor": Object {
                      "100": "#E5EDFC",
                      "300": "#89AAE7",
                      "500": "#0CC0EA",
                      "700": "#1250C4",
                      "900": "#002F7B",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "secondary": Object {
                    "mainColor": Object {
                      "100": "#F7B0C8",
                      "300": "#F278A1",
                      "500": "#E91E63",
                      "700": "#DE0059",
                      "900": "#9E003F",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "success": Object {
                    "mainColor": Object {
                      "100": "#dcedc8",
                      "300": "#c9eda2",
                      "500": "#7ed321",
                      "700": "#3b610f",
                      "900": "#004D40",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "warning": Object {
                    "mainColor": Object {
                      "100": "#ffefd6",
                      "300": "#ffda6a",
                      "500": "#ffc107",
                      "700": "#f09100",
                      "900": "#d14900",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                },
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component When you set a different skin Should match a skin snapshot 5`] = `
.c7 {
  margin-right: 8px;
  pointer-events: none;
  width: 24px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c3 .c6 function (_ref6) {
  -webkit-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -moz-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  -ms-var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  var: size = _ref6.size, _ref6$theme$spacing = _ref6.theme.spacing, xxsmall = _ref6$theme$spacing.xxsmall, medium = _ref6$theme$spacing.medium, large = _ref6$theme$spacing.large;
  return: "\\n          font-size: ".concat(fontSizes[size],";\\n          margin-right: ").concat(xxsmall,"px;\\n        ");
}

.c3 .c6 function (_ref6) var fontSizes = {
  xsmall: "".concat(medium,"px"), small:"".concat(medium,"px"), medium:"".concat(large,"px"), large:"".concat(large,"px"), xlarge:"".concat(large,"px");
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c5 .c6 {
  margin-right: 0;
}

.c5:hover,
.c5:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c5:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c5:hover {
  background: none;
  opacity: 1;
}

.c8 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #424242;
  margin-right: 16px;
}

.c8 .c1 > .c4 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c8 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #424242;
  margin-left: 0;
}

.c9 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #1250C4;
  margin-right: 16px;
}

.c9 .c1 > .c4 {
  color: #1250C4;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c9 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #1250C4;
  margin-left: 0;
}

.c10 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #3b610f;
  margin-right: 16px;
}

.c10 .c1 > .c4 {
  color: #3b610f;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c10 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #3b610f;
  margin-left: 0;
}

.c11 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #f09100;
  margin-right: 16px;
}

.c11 .c1 > .c4 {
  color: #f09100;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c11 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #f09100;
  margin-left: 0;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #fff5f5;
  border: 1.5px solid #e91b0c;
  color: #ac001a;
  padding: 12px 16px;
}

.c0 .c1 .Alert__AlertIcon-sc-17a2h08-1 {
  color: #e91b0c;
  margin-right: 16px;
}

.c0 .c1 > .c4 {
  color: #e91b0c;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c4 .Button__IconButton-sc-1ovnfsw-2 {
  color: #e91b0c;
  margin-left: 0;
}

<div
  className="c0"
  role="alert"
>
  <div
    className="c1 c2"
    onClose={[Function]}
  >
    <span>
      error
    </span>
    <button
      className="c3 Button__IconButton-sc-1ovnfsw-2 c4 c5"
      disabled={false}
      onClick={[Function]}
      size="medium"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root c6 c7"
        data-qtm-preloader="icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        theme={
          Object {
            "baseFontSize": 16,
            "breakpoints": Object {
              "large": Object {
                "columns": 12,
                "width": 1440,
              },
              "medium": Object {
                "columns": 12,
                "width": 1024,
              },
              "small": Object {
                "columns": 8,
                "width": 600,
              },
              "xlarge": Object {
                "columns": 12,
                "width": 1920,
              },
              "xsmall": Object {
                "columns": 4,
              },
            },
            "colors": Object {
              "error": Object {
                "100": "#fff5f5",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "components": Object {
              "alert": Object {
                "skins": Object {
                  "error": Object {
                    "background": "#fff5f5",
                    "icon": "#e91b0c",
                    "text": "#ac001a",
                  },
                  "neutral": Object {
                    "background": "#f2f2f2",
                    "icon": "#424242",
                    "text": "#191919",
                  },
                  "primary": Object {
                    "background": "#E5EDFC",
                    "icon": "#1250C4",
                    "text": "#002F7B",
                  },
                  "success": Object {
                    "background": "#dcedc8",
                    "icon": "#3b610f",
                    "text": "#004D40",
                  },
                  "warning": Object {
                    "background": "#ffefd6",
                    "icon": "#f09100",
                    "text": "#d14900",
                  },
                },
              },
              "button": Object {
                "skins": Object {
                  "error": Object {
                    "mainColor": Object {
                      "100": "#fff5f5",
                      "300": "#f88e86",
                      "500": "#ec584e",
                      "700": "#e91b0c",
                      "900": "#ac001a",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "neutral": Object {
                    "mainColor": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "primary": Object {
                    "mainColor": Object {
                      "100": "#E5EDFC",
                      "300": "#89AAE7",
                      "500": "#0CC0EA",
                      "700": "#1250C4",
                      "900": "#002F7B",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "secondary": Object {
                    "mainColor": Object {
                      "100": "#F7B0C8",
                      "300": "#F278A1",
                      "500": "#E91E63",
                      "700": "#DE0059",
                      "900": "#9E003F",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "success": Object {
                    "mainColor": Object {
                      "100": "#dcedc8",
                      "300": "#c9eda2",
                      "500": "#7ed321",
                      "700": "#3b610f",
                      "900": "#004D40",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                  "warning": Object {
                    "mainColor": Object {
                      "100": "#ffefd6",
                      "300": "#ffda6a",
                      "500": "#ffc107",
                      "700": "#f09100",
                      "900": "#d14900",
                    },
                    "text": Object {
                      "0": "#ffffff",
                      "100": "#f2f2f2",
                      "1000": "#000000",
                      "300": "#e0e0e0",
                      "500": "#999999",
                      "700": "#424242",
                      "900": "#191919",
                    },
                  },
                },
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;
